got nav bar completely ironed out so it will condense space across page, although mobile version will have to be coded in later, got werid spacing issues figured out in various parts of the project, added gradients to the nav menu made the selection bars not have that hyperlink style, will have it so that they expand when the user clicks them later

--- a/css/homepage/introsection.css
+++ b/css/homepage/introsection.css
@@ -1,26 +1,28 @@
 section.introsection{
     /*general settings for our introsection*/
-    font-size: 26;
+    font-size: xx-large;
     font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-    border-bottom-style: solid;
+    border-bottom-style: solid ;
+    border-width: 4px;
     border-color: white;
     padding: 0px;
     margin: 0px;
+    display: flex;
+    flex-direction: row;
 }
 
 .introsectionlogo img{
     /*style settings for our logo*/
-    display: inline-block;
-    padding: 20px 10px 0px 0px;
+    flex:1;
+    padding: 20px 10px;
     margin:0;
-    position: relative;  
+      
 
 }
 
 .introsectiontitle h1{
     /*style settings for title*/
-    position: relative;
-    top: -35px;
+    flex: 1;
     
 }
 
