--- a/css/navmenu.css
+++ b/css/navmenu.css
@@ -1,28 +1,34 @@
 header.navmenu{
     /*general style for the navagation menu at the top */
     background: rgb(199, 199, 199,1);
+    background: linear-gradient(180deg,rgb(199, 199, 199),rgb(92, 92, 92));
     color:black;
-    font-size: 14;
+    font-size: 14px;
     font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-    display: flex;
-    flex-direction: row;
-    padding: 0px 17.5% 0px 17.5%;
+    padding: 0px 0px 0px 0px;
 }
 
 .navmenu nav{
    /*style for the nav menu as a whole*/
-   list-style-type: none;
    text-align: center;
-   flex: 1;
-   width:auto;
-   height: auto;
+   flex-basis: 100%;
+   width:80vmax;
+   padding:14px 0px 14px 0px;
+   margin: auto;
+   display: flex;
+   flex-direction: row;
 
 }
-.navmenu li{
+
+
+
+.navmenu div{
     /*style for the individual elements in the unordered list*/
-   display:inline-block;
-   padding:0px 2.5% 0px 2.5%;
+   margin:auto;
+   width: auto;
+  padding: auto;
    text-align: center;
+   
 }
 
 .navmenu a{
@@ -33,16 +39,16 @@ header.navmenu{
 }
 a:hover{
     /*styles the links so that they change color when you hover over them*/
-    color:rgb(114, 114, 114);
+    color:rgb(50, 50, 50);
 }
 
 .navmenu li:first-child {
-    display:inline-block;
-   padding:0px 2.5% 0px 0px;
+    display:inline-flex;
+   padding:0px auto 0px 0px;
    text-align: center;
 }
 .navmenu li:last-child {
-    display:inline-block;
-   padding:0px 0px 0px 2.5%;
+    display:inline-flex;
+   padding:0px 0px 0px auto;
    text-align: center;
 }
